public/assets/css/style.css
/* ... */
/* Icon */
.zodiac-icon {
	width: 70px;
	height: 70px;
	margin: 0 auto 15px;
	border-radius: 50%;
	background: linear-gradient(135deg, #f9ddc8, #ffffff);
	display: flex;
	align-items: center;
	justify-content: center;
}

.zodiac-icon img {
	width: 38px;
	height: auto;
}

/* Text */
.zodiac-card h5 {
	font-size: 16px;
	font-weight: 600;
	color: #222;
	margin-bottom: 4px;
	font-family: "Lato", sans-serif;
}

.zodiac-card p {
	font-size: 13px;
	color: #777;
	margin: 0;
}

/* Hover Effect */
.zodiac-card:hover {
	transform: translateY(-8px);
	box-shadow: 0 18px 45px rgba(0, 0, 0, 0.12);
}

.zodiac-card:hover h5 {
	color: #d4af37;
}


.schedule-section {
	/* padding:50px 0; */
}

.live-show {
	display: flex;
	flex-wrap: wrap;
	gap: 25px;
	justify-content: center;
}

.live-show-box {
	text-decoration: none;
	width: 254px;
}

.schedule-category {
	background: #ffffff;
	border-radius: 15px;
	padding: 15px 15px;
	text-align: center;
	transition: 0.3s ease;
	height: 100%;
	transition: all 0.35s ease;
	box-shadow: 0 10px 30px rgba(0, 0, 0, 0.06);
	border: 2px dotted #fc9100;
}

.schedule-category:hover {
	transform: translateY(-6px);
	box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
}

.schedule-icon img {
	width: 120px;
	height: auto;
	margin-bottom: 15px;
}

.schedule-category span {
	display: block;
	font-weight: 600;
	color: #333;
	margin-top: 8px;
}

@media(max-width:768px) {
	.live-show {
		justify-content: center;
	}

	.live-show-box {
		width: 45% !important;
	}
}

@media(max-width:480px) {
	.live-show-box {
		width: 100%;
	}
}


.section-space {
	padding: 30px 0;
}

.section-title {
	font-weight: 600;
	margin-bottom: 30px;
	font-family: "Lato", sans-serif;
}

.reading-card {
	cursor: pointer;
	transition: 0.3s ease;
	text-align: center;
}

.reading-card img {
	width: 100%;
	border-radius: 18px;
	transition: 0.3s ease;
}

.reading-card:hover img {
	transform: scale(1.05);
}

.reading-card:hover {
	transform: translateY(-5px);
}

.reading-card p {
	margin-top: 10px;
	font-weight: 300;
	font-family: "Lato", sans-serif;
	color: #000;
}


/* Section */
.blog-section {
	padding: 50px 0;
}

/* Header */
.blog-header {
	display: flex;
	justify-content: space-between;
	align-items: center;
	margin-bottom: 25px;
}

.view-all-btn {
	border: 1px solid #d4a017;
	color: #d4a017;
	border-radius: 8px;
	padding: 6px 20px;
	font-size: 14px;
	background: transparent;
	transition: 0.3s;
}

.view-all-btn:hover {
	background: linear-gradient(135deg, #ff9800, #f57c00);
	color: #fff;
}

/* Card */
.blog-card {
	border-radius: 20px;
	overflow: hidden;
	transition: 0.3s ease;
	background: #fff;
	cursor: pointer;
	height: 100%;
}

.blog-card:hover {
	transform: translateY(-6px);
	box-shadow: 0 12px 25px rgba(0, 0, 0, 0.08);
}

.blog-img {
	position: relative;
}

.blog-img img {
	width: 100%;
	height: 220px;
	object-fit: cover;
}

/* Badge */
.blog-badge {
	position: absolute;
	top: 15px;
	left: 15px;
	width: 35px;
	height: 35px;
	background: linear-gradient(135deg, #ff9800, #f57c00);
	border-radius: 50%;
	display: flex;
	align-items: center;
	justify-content: center;
	font-weight: 700;
}

/* Content */
.blog-body {
	padding: 18px;
}

.blog-title {
	font-size: 15px;
	font-weight: 400;
	margin-bottom: 18px;
	font-family: "Lato", sans-serif;
}

/* Footer */
.blog-footer {
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.author-info {
	display: flex;
	align-items: center;
	gap: 8px;
	font-size: 13px;
	color: #555;
}

.author-info img {
	width: 28px;
	height: 28px;
	border-radius: 50%;
}

.arrow-btn {
	width: 32px;
	height: 32px;
	background: linear-gradient(135deg, #ff9800, #f57c00);
	border-radius: 50%;
	display: flex;
	align-items: center;
	justify-content: center;
	font-size: 14px;
	color: #ffffff;
}


.testimonial-section {
	padding: 60px;
	position: relative;
	border-radius: 20px;
}

.testimonial-title {
	font-weight: 600;
	margin-bottom: 30px;
	font-family: "Lato", sans-serif;
}

.testimonial-card {
	background: #fff;
	border-radius: 15px;
	padding: 25px;
	height: 100%;
	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
	min-height: 215px;
}

.testimonial-text {
	font-size: 14px;
	color: #444;
	line-height: 1.7;
	margin-bottom: 20px;
	font-family: "Lato", sans-serif;
}

.user-info {
	display: flex;
	align-items: center;
	gap: 10px;
}

.user-avatar {
	width: 35px;
	height: 35px;
	border-radius: 50%;
	background: linear-gradient(135deg, #ff9800, #f57c00);
	color: #fff;
	display: flex;
	align-items: center;
	justify-content: center;
	font-weight: 600;
}

/* Custom dots */
.carousel-indicators [data-bs-target] {
	width: 8px;
	height: 8px;
	border-radius: 50%;
	background: #ccc;
}

.carousel-indicators .active {
	background: #d4a017;
}

.testimonial-section {
	background: #0000000d;
}


.faq-section {
	padding: 60px 0;
}

.faq-title {
	font-weight: 600;
	margin-bottom: 30px;
	font-family: "Lato", sans-serif;
}

.accordion-button {
	font-weight: 400;
	padding: 18px;
	font-family: "Lato", sans-serif;
}

.accordion-button:not(.collapsed) {
	background: #f57c0033 !important;
	color: #c58b00;
	font-family: "Lato", sans-serif;
}

.accordion-item {
	border-radius: 12px;
	overflow: hidden;
	margin-bottom: 15px;
	border: 1px solid #eee;
}

.accordion-body {
	font-size: 14px;
	color: #555;
	line-height: 1.7;
	font-family: "Lato", sans-serif;
}


/* Footer Style */
.footer {
	background: #f8f8f8;
	color: #ccc;
	padding: 60px;
	float: left;
	width: 100%;
	border-top: 1px solid #eee;
}

.footer h5 {
	color: #000000;
	margin-bottom: 12px;
	font-weight: 600;
}

.footer a {
	color: #3b3b3b;
	text-decoration: none;
	display: block;
	margin-bottom: 5px;
	font-size: 14px;
	transition: 0.3s;
}

.footer a:hover {
	color: #f4b400;
	padding-left: 5px;
}

.app-btn img {
	height: 40px;
	margin-right: 10px;
	margin-bottom: 10px;
}
/* ... */

